# agente-films

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_DESIGN.md  Dockerfile  KUBERNETES_ARCHITECTURE.md  LITELLM_IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  architecture.md  docker-compose.yml  litellm-config.yaml  main.py  pyproject.toml  pytest.ini  start.sh  stop.sh  tasks.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6b64d4edfdb6_initial_migration.py
backend/app/: config.py
backend/app/agents/: base.py  box_office.py  casting.py  critic.py  file_writer.py  greeter.py  researcher.py  screenwriter.py  tools.py  workflows.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routers/: messages.py  sessions.py  websocket.py
backend/app/core/: adk_runner.py  session_manager.py
backend/app/db/: base.py  models.py  schemas.py
backend/app/db/repositories/: session.py
backend/app/services/: litellm_client.py  persistence_service.py  session_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: test_messages.py  test_sessions.py
backend/tests/unit/: test_config.py
backend/tests/unit/agents/: test_base.py  test_box_office.py  test_casting.py  test_critic.py  test_file_writer.py  test_greeter.py  test_researcher.py  test_screenwriter.py  test_tools.py  test_workflows.py
backend/tests/unit/api/: README.md  test_main.py
backend/tests/unit/core/: test_adk_runner.py  test_session_manager.py
backend/tests/unit/db/: test_base.py  test_models.py  test_schemas.py
backend/tests/unit/repositories/: test_session.py
backend/tests/unit/services/: test_persistence_service.py  test_session_service.py
database/: README.md  example_models.py  example_usage.py  migrations_guide.md  performance_guide.md  queries.sql  schema.sql  schema_diagram.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  INDEX.md  LITELLM_SETUP.md  QUICK_START.md  SUMMARY.md  TESTING.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
scripts/: e2e_test.py  init-postgres.sh  test_models.py  verify_setup.py
src/: __init__.py
src/agents/: __init__.py  screenplay_agent.py
src/api/: main.py  models.py  repository.py
tests/: __init__.py  conftest.py
tests/unit/: test_screenplay_agent.py
